--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.2.5
-  firebase_auth: ^0.6.6
-  google_sign_in: ^3.2.4
+  firebase_core:
+  firebase_auth:
+  google_sign_in:
+  shared_preferences: ^0.4.3
   http: ^0.12.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,7 +44,6 @@ flutter:
 
   assets:
     - assets/glogo.png
-    - assets/newsplace.png
 
   uses-material-design: true
 
